--- a/practice.html
+++ b/practice.html
@@ -11,6 +11,10 @@
             padding: 2rem;
             background: #f4f4f9;
             color: #333;
+            font-family: Arial, sans-serif;
+            padding: 2rem;
+            background: #f4f4f9;
+            color: #333;
         }
 
         h2 {
