--- a/practice.html
+++ b/practice.html
@@ -12,6 +12,16 @@
             background: #f4f4f9;
             color: #333;
 
+            font-family: Arial, sans-serif;
+            padding: 2rem;
+            background: #f4f4f9;
+            color: #333;
+
+            font-family: Arial, sans-serif;
+            padding: 2rem;
+            background: #f4f4f9;
+            color: #333;
+
         }
 
         h2 {
