--- a/hm.html
+++ b/hm.html
@@ -9,6 +9,7 @@
         body {
             font-family: Arial, sans-serif;
             padding: 2rem;
+            padding: 2rem;
             background: #f4f4f9;
             color: #333;
         }
