--- a/practice.html
+++ b/practice.html
@@ -13,6 +13,10 @@
             color: #333;
 
 
+            padding: 2rem;
+            background: #f4f4f9;
+            color: #333;
+
             font-family: Arial, sans-serif;
             padding: 2rem;
             background: #f4f4f9;
