--- a/hm.html
+++ b/hm.html
@@ -55,6 +55,9 @@
         .highlight {
             font-weight: bold;
             color: #007bff;
+            color: #007bff;
+            color: #007bff;
+
         }
     </style>
 </head>
